add get comments
